# django-payments

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  db.sqlite3  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: release.yml  test.yml
doc/: alternate_provider_factory.rst  conf.py  index.rst  install.rst  modules.rst  preauth.rst  refund.rst  usage.rst
docs/: Makefile  api.rst  backends.rst  conf.py  index.rst  install.rst  modules.rst  payment-model.rst  preauth.rst  refund.rst  usage.rst  variants.rst  wallet.rst  webhooks.rst
example/: settings.py  urls.py  wsgi.py
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
payment/: models.py  utils.py  widgets.py
payment/authorizenet/: forms.py
payment/braintree/: __init__.py  test_braintree.py
payment/coinbase/: __init__.py
payment/cybersource/xml/: CyberSourceTransaction_1.101.wsdl
payment/dotpay/: test_dotpay.py
payment/locale/en/LC_MESSAGES/: django.po
payment/locale/it/LC_MESSAGES/: django.mo
payment/locale/ru/LC_MESSAGES/: django.mo  django.po
payment/paypal/: __init__.py  forms.py  test_paypal.py
payment/templates/payments/: credit_card_expiry_widget.html
payment/templates/payments/sofort/: refund_transaction.xml
payment/wallet/: test_wallet.py
payments/: __init__.py  core.py  fields.py  forms.py  models.py  serializers.py  signals.py  test_core.py  test_fields.py  test_serializers.py  test_subscription.py  test_urls.py  test_wallet.py  testcommon.py  tests.py  urls.py  utils.py  widgets.py
payments/authorizenet/: __init__.py  forms.py  test_authorizenet.py
payments/bnlp/: __init__.py
payments/braintree/: __init__.py  forms.py  test_braintree.py  tests.py
payments/coinbase/: __init__.py  test_coinbase.py  tests.py
payments/cybersource/: __init__.py  forms.py  test_cybersource.py
payments/cybersource/xml/: CyberSourceTransaction_1.101.test.wsdl  CyberSourceTransaction_1.101.xsd
payments/dotpay/: __init__.py  forms.py  test_dotpay.py  tests.py
payments/dummy/: __init__.py  forms.py  serializers.py  test_dummy.py  tests.py  views.py
payments/dummy/templates/payments/dummy/: form.html
payments/externalpayments/: __init__.py  forms.py  test_externalpayments.py
payments/giropay/: __init__.py
payments/locale/de/LC_MESSAGES/: django.mo  django.po
payments/locale/en/LC_MESSAGES/: django.mo  django.po
payments/locale/es/LC_MESSAGES/: django.mo  django.po
payments/locale/fr/LC_MESSAGES/: django.mo  django.po
payments/locale/it/LC_MESSAGES/: django.mo  django.po
payments/locale/ja/LC_MESSAGES/: django.mo  django.po
payments/locale/ko/LC_MESSAGES/: django.mo  django.po
payments/locale/pl/LC_MESSAGES/: django.mo  django.po
payments/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
payments/locale/ru/LC_MESSAGES/: django.mo  django.po
payments/locale/sk/LC_MESSAGES/: django.mo  django.po
payments/locale/tr/LC_MESSAGES/: django.mo  django.po
payments/locale/uk/LC_MESSAGES/: django.mo  django.po
payments/mercadopago/: __init__.py  test_mercadopago.py
payments/paydirekt/: __init__.py  test_paydirekt.py
payments/paypal/: __init__.py  forms.py  test_paypal.py  tests.py
payments/paypal-card/: __init__.py  fields.py  forms.py  widgets.py
payments/paythefly/: __init__.py  test_paythefly.py
payments/payu_rest/: __init__.py  test_payu.py
payments/razorpay/: __init__.py  forms.py  widgets.py
payments/sagepay/: __init__.py  test_sagepay.py
payments/sofort/: __init__.py  test_sofort.py
payments/static/js/payments/: stripe.js
payments/static/payments/js/: stripe.js  wallet.js
payments/stripe/: __init__.py  forms.py  providers.py  test_fee_retrieval.py  test_recurring.py  test_stripe.py  test_stripev3.py  test_webhook_stores_token.py  tests.py  widgets.py
payments/taler/: __init__.py  amount.py  test_amount.py  test_taler.py
payments/templates/payments/: credit_card_expiry_widget.html  cybersource_fingerprint.html  payment_form.html  sensitive_select.html  sensitive_text_input.html  taler_fallback.html
payments/templates/payments/sagepay/: return.html
payments/templates/payments/sofort/: new_transaction.xml  refund_transaction.xml  transaction_request.xml
payments/todopago/: __init__.py  test_todopago.py
payments/wallet/: __init__.py  forms.py  test_wallet.py  tests.py  widgets.py
payments/zarinpal/: __init__.py
testapp/: manage.py  payments
testapp/testapp/: asgi.py  settings.py  urls.py  wsgi.py
testapp/testapp/testmain/: forms.py  models.py  test_subscription.py  test_wallet.py  urls.py  views.py
testapp/testapp/testmain/migrations/: 0001_initial.py  0002_payment_billing_phone.py  0003_alter_payment_status.py  0003_wallet_payment_wallet.py  0004_subscription_payment_subscription.py
testapp/testapp/testmain/templates/: create_payment.html  payment.html
